objects/BRNSHRK__Brainshark_Coaching_Invitation__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__BnskIsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CoachingActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching Activity</label>
        <referenceTo>BRNSHRK__Brainshark_Coaching__c</referenceTo>
        <relationshipLabel>Brainshark Coaching Invitations</relationshipLabel>
        <relationshipName>Brainshark_Coaching_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__InvitationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invitation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__InvitationId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Invitation Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__LatestSubmissionVersion__c</fullName>
        <label>Latest Submission Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Coaching_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brainshark Coaching Invitation</label>
    <nameField>
        <displayFormat>BCI-{00000}</displayFormat>
        <label>Brainshark Coaching Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Coaching Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>